# wdr-maus-downloader

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-run.sh  download.js  index.js  package-lock.json  package.json  resilio-config.json  run-api.sh  set-resilio-share.js  tsconfig.json
.github/: dependabot.yml
.github/workflows/: container.yml  deno.yml  rust.yml
source/: check-already-downloaded.ts  constants.ts  download.js  download.ts  formatting.ts  generics.ts  index.js  index.ts  parse-media-obj.ts  resilio-config.json  resilio.js  resilio.ts
source/media-objects/: currently-available.ts  index.ts  parse-media-obj.ts
src/: daily.rs  downloaded.rs  ffmpeg.rs  image.rs  main.rs  scrape.rs  telegram.rs  temporary.rs  wdr_media.rs
