[package]
name = "wdr-maus-downloader"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/EdJoPaTo/wdr-maus-downloader"
authors = ["EdJoPaTo <wdr-maus-downloader-rust@edjopato.de>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# See https://doc.rust-lang.org/rustc/codegen-options/index.html
codegen-units = 1
lto = true

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
frankenstein = "0.22"
once_cell = "1"
regex = "1"
retry = { version = "2", default-features = false }
scraper = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3"
ureq = "2"
url = { version = "2", features = ["serde"] }
