[package]
name = "wdr-maus-downloader"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/EdJoPaTo/wdr-maus-downloader"
authors = ["EdJoPaTo <wdr-maus-downloader-rust@edjopato.de>"]
edition = "2024"

[lints.rust]
unsafe_code = "forbid"
unused_qualifications = "warn"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
min_ident_chars = "warn"
unused_trait_names = "warn"

[profile.release]
# See https://doc.rust-lang.org/cargo/reference/profiles.html
codegen-units = 1
lto = true

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
frankenstein = { version = "0.44", features = ["client-ureq"] }
lazy-regex = "3"
retry = { version = "2", default-features = false }
scraper = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3"
ureq = "3"
url = { version = "2", features = ["serde"] }
